2015-02-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree_types.h (enum extra_type): Add extra_deleted.
	* parser.c (abort_empty_line): Remove "spaces_before_argument" 
	extra value.
	(process_remaining_on_line): Add check for empty input ("EMPTY 
	TEXT").

2015-02-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* macro.c (store_value, fetch_value): New functions.
	* end_line.c (parse_special_misc_command): First implementation.  
	Handle @value.
	* handle_commands.c (handle_misc_command) <MISC_special etc.>: 
	More complete.
	* parser.c (process_remaining_on_line): Handle @value.

2015-02-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* api.c (build_index_data): New function.

2015-02-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* api.c (build_texinfo_tree, build_label_list): New functions,
	to construct Perl objects directly in memory, as a possible 
	replacement for using "eval" in Perl.
	* Makefile.am (AM_CFLAGS): Add flags for linking with Perl 
	libraries.

	* Parsetexi/lib/Parsetexi.pm (parse_texi_file): Add another
	way to get data from C program (disabled).  (Indices not done 
	yet.)

2015-02-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree.c (insert_into_contents): Update parent field of inserted 
	element.

2015-02-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* input.c, Parsetexi/Parsetexi.xs (add_include_directory): New 
	function.
	* Parsetexi/lib/Parsetexi.pm (parser): Call it.
	* input.c (input_push_file): Look through list of include 
	directories.

2015-02-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (abort_empty_line) <ET_empty_line>: Clear type of
	ET_empty_line element as intended, instead of deleting it.

2015-02-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* separator.c (register_command_arg): New function.
	(handle_close_brace, handle_comma) <brace commands with positive 
	number of args>: Call it.
	* extra.c (add_extra_key_contents_array): New function.

2015-02-12  Gavin Smith  <gavinsmith0123@gmail.com>
